# hpffp-exercises

./: README.md  hpffp-exercices.cabal
src/Chapter25/: BiFunctor.hs  Compose.hs  IdentityT.hs
src/Chapter26/: EitherT.hs  MaybeT.hs  ReaderT.hs  StateT.hs
