name:                hpffp-exercices
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jmgimeno/hpffp-exercices#readme
license:             BSD3
license-file:        LICENSE
author:              Juan Manuel Gimeno Illa
maintainer:          jmgimeno@gmail.com
copyright:           2017 Juan Manuel Gimeno Illa
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hpffp-exercices
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
